CI: validate witx with witx-codegen

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -15,4 +15,6 @@ jobs:
           override: true
 
       - name: Validate witx
-        run: cargo run --manifest-path=validate-witx/Cargo.toml ./compute-at-edge.witx
+        run: |
+          cargo install witx-codegen
+          witx-codegen -t assemblyscript witx-next/*.witx > /dev/null
