--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -18,3 +18,16 @@ jobs:
         run: |
           cargo install witx-codegen
           witx-codegen -t assemblyscript witx-next/*.witx > /dev/null
+
+      - name: Check indentation
+        run: |
+          cargo install witx-indent
+          find . -name '*.witx' | while read -r f; do
+              witx-indent "$f" >"${f}.indented"
+              if ! cmp "$f" "${f}.indented"; then
+                  echo "* [${f}] is not properly indented:" >&2
+                  diff -u "$f" "${f}.indented" >&2
+                  exit 1
+              fi
+              rm -f "${f}.indented"
+          done
